--- a/_config.yml
+++ b/_config.yml
@@ -133,7 +133,7 @@ author:
       url: "https://instagram.com/sojiha_621"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "www.linkedin.com/in/sophieha621"
+      url: "https://www.linkedin.com/in/sophie-ha-2b8633323"
 
 # Site Footer
 footer:
