--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ author:
   name             : "Sophie Ha"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
-  location         : "Somewhere in US"
+  location         : "Somewhere in Earth 🌏"
   email            :
   links:
     - label: "Email"
