--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,8 @@ main:
     url: /recipes/
   - title: "Book"
     url: /books/
+  - title: "Blog"
+    url: /blogs/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
