--- a/_config.yml
+++ b/_config.yml
@@ -264,12 +264,12 @@ whitelist:
 #  - <base_path>/tags/my-awesome-tag/index.html ~> path: /tags/
 #  - <base_path>/categories/my-awesome-category/index.html ~> path: /categories/
 #  - <base_path>/my-awesome-category/index.html ~> path: /
-category_archive:
-  type: liquid
-  path: /categories/
-tag_archive:
-  type: liquid
-  path: /tags/
+# category_archive:
+#   type: liquid
+#   path: /categories/
+# tag_archive:
+#   type: liquid
+#   path: /tags/
 recipe_archive:
   type: liquid
   path: /recipes/
@@ -282,20 +282,20 @@ blog_archive:
 # https://github.com/jekyll/jekyll-archives
 jekyll-archives:
   enabled:
-    - categories
-    - tags
+    # - categories
+    # - tags
     - recipes
     - books
     - blogs
   layouts:
-    category: archive-taxonomy
-    tag: archive-taxonomy
+    # category: archive-taxonomy
+    # tag: archive-taxonomy
     recipe: archive-taxonomy
     book: archive-taxonomy
     blog: archive-taxonomy
   permalinks:
-    category: /categories/:name/
-    tag: /tags/:name/
+    # category: /categories/:name/
+    # tag: /tags/:name/
     recipe: /recipes/:name/
     book: /books/:name/
     blog: /blogs/:name/
