--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,10 @@
 main:
   # - title: "Quick-Start Guide"
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  - title: "Category"
-    url: /categories/
-  - title: "Tag"
-    url: /tags/
+  # - title: "Category"
+  #   url: /categories/
+  # - title: "Tag"
+  #   url: /tags/
   - title: "Recipe"
     url: /recipes/
   - title: "Book"
